# AndroidVideo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/net168/androidvideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/base/: CMakeLists.txt  android_ctx.cpp  assets.cpp  baselib.cpp  classloader.cpp  hash_compare.cpp  jvm.cpp  toast.cpp
app/src/main/cpp/base/include/: android_ctx.h  assets.h  baselib.h  classloader.h  hash_compare.h  jvm.h  toast.h  utils.h
app/src/main/cpp/opengl/: CMakeLists.txt  egl_base.cpp  opengl_helper.cpp  opengl_helper.h  tex_transform_util.cpp  tex_transform_util.h  texture_render.cpp
app/src/main/cpp/opengl/include/: egl_base.h  texture_render.h
app/src/main/java/com/net168/androidvideo/: FboDrawActivity.java  GLSurfaceViewActivity.java  JniOpenGLDrawActivity.java  MainActivity.java  OpenGLDrawActivity.java  SurfaceTextureActivity.java  SurfaceViewActivity.java  TextureViewActivity.java
app/src/main/java/com/net168/capture/: BaseBuilder.java  Camera2Capture.java  CameraCapture.java  CameraUtils.java  PreView.java  SurfaceViewPreView.java  TextureViewPreView.java  VideoCapture.java
app/src/main/java/com/net168/opengl/: EglBase.java  EglBase10.java  EglBase14.java  FboDraw.java  FboRenderBufferDraw.java  FboTextureDraw.java  GlUtil.java  SimpleSurfaceHolder.java  TexTransformUtil.java  Texture2dRender.java  (+4 more)
app/src/main/res/layout/: activity_draw_fbo.xml  activity_glsurfaceview.xml  activity_main.xml  activity_textureview.xml
(+2 files in other folders)
